force-app/main/default/objects/Sales_Manager_Summary_Note__c/Sales_Manager_Summary_Note__c.object-meta.xml
<CustomObject>
    <description>Corporate Account Report Note</description>
    <label>Sales Manager Summary Note</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>SN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Manager Summary Note</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>