force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Manager Summary Note</relationshipLabel>
    <relationshipName>Corporate_Account_Report_Note</relationshipName>
    <type>Lookup</type>
</CustomField>