force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>