force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Issues_Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Issues_Obstacles__c</fullName>
    <label>Issues &amp; Obstacles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>