force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/My_Teams_Notes__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_Notes__c</fullName>
    <formula>IF( 
or( 
 CreatedById   = $User.Id 
,  CreatedBy.ManagerId  = $User.Id 
,  CreatedBy.Manager.ManagerId  = $User.Id 
,  CreatedBy.Manager.Manager.ManagerId   = $User.Id 
) 
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Teams Notes</label>
    <type>Checkbox</type>
</CustomField>