force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Note field for Corporate Account report</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>