force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Manager Summary Note (Opportunity)</relationshipLabel>
    <relationshipName>Sales_Manager_Summary_Note</relationshipName>
    <type>Lookup</type>
</CustomField>