force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Strategic_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Account Plan</label>
    <referenceTo>Strategic_Account_Plan__c</referenceTo>
    <relationshipLabel>Sales Manager Summary Note</relationshipLabel>
    <relationshipName>Sales_Manager_Summary_Note</relationshipName>
    <type>Lookup</type>
</CustomField>