force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Types of notes corporate account managers record</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Event</fullName>
            </value>
            <value>
                <fullName>Account Health</fullName>
            </value>
            <value>
                <fullName>CAM Quarterly Forecast</fullName>
            </value>
            <value>
                <fullName>Industry Trends</fullName>
            </value>
            <value>
                <fullName>Inside Sales Feedback</fullName>
            </value>
            <value>
                <fullName>Issues/Obstacles</fullName>
            </value>
            <value>
                <fullName>Key Losses</fullName>
            </value>
            <value>
                <fullName>Key Wins</fullName>
            </value>
            <value>
                <fullName>Opportunity Update</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Sales Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>