force-app/main/default/objects/Sales_Manager_Summary_Note__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>Forecast__c  -  Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>