force-app/main/default/objects/Sales_Manager_Summary_Note__c/validationRules/Require_Opportunity_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Opportunity_Account</fullName>
    <active>true</active>
    <description>Make Account/Opportunity a required field  depending on Type chosen</description>
    <errorConditionFormula>or(
and( 
NOT ($Profile.Name = &quot;Integration&quot;), 
isblank(Opportunity__c), 
text(Type__c) = &apos;Opportunity Update&apos;),

and( 
NOT ($Profile.Name = &quot;Integration&quot;), 
NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;), 
isblank(Account__c), 
text(Type__c) = &apos;Account Event&apos;)
)</errorConditionFormula>
    <errorMessage>Please select the related Account/Opportunity</errorMessage>
</ValidationRule>