force-app/main/default/objects/Sales_Manager_Summary_Note__c/listViews/My_Sales_Manager_Summary_Notes.listView-meta.xml
<ListView>
    <fullName>My_Sales_Manager_Summary_Notes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Note__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Manager Summary Notes</label>
    <language>en_US</language>
</ListView>