force-app/main/default/objects/Sales_Manager_Summary_Note__c/listViews/My_Teams_Notes.listView-meta.xml
<ListView>
    <fullName>My_Teams_Notes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>,CAM Quarterly Forecast,Industry Trends,Issues/Obstacles,Key Losses,Key Wins</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>-</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/1/2020 12:00 AM</value>
    </filters>
    <label>All Notes - All CAM Teams</label>
    <language>en_US</language>
</ListView>